<resources>
    <string name="app_name">BE BETTER</string>
    <string name="title_home">일정</string>
    <string name="title_dashboard">어제</string>
    <string name="title_notifications">오늘</string>
    <string name="title_graph">성장그래프</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="yesterday_plan">계획했던 일 </string>
    <string name="yesterday_message">나에게 남긴 메시지 </string>

    <string name="today_plan">계획한 일 </string>
    <string name="today_message">나에게 남길 메시지 </string>
    <string name="set_rating">오늘하루의 평점 </string>

    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>

    <string name="home_text">날짜를 클릭하시고 일정을 추가해 주세요 </string>
    <string name="text_hint">내용을 입력하세요</string>

    <string name="colon_text_home">나의 다짐 작성하기</string>
    <string name="colon_text_notification">나의 다짐! ("일정" 에서 작성해주세요)</string>

    <string name="history">기록 확인하기 : </string>
</resources>