<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_home"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp">

                    <CalendarView
                        android:id="@+id/calendarView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/remember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="start"
                        android:layout_marginStart="20dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/colon_start"
                        tools:ignore="ContentDescription" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <LinearLayout
                            android:id="@+id/remember_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:visibility="invisible">

                            <EditText
                                android:id="@+id/remember_editText"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:hint="@string/colon_text_home"
                                tools:ignore="Autofill,TextFields" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:orientation="horizontal">

                                <ImageButton
                                    android:id="@+id/remember_save"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:background="@null"
                                    android:paddingLeft="10dp"
                                    android:paddingRight="10dp"
                                    android:scaleType="fitCenter"
                                    android:src="@android:drawable/ic_input_add"
                                    android:visibility="gone"
                                    tools:ignore="ContentDescription" />

                                <ImageButton
                                    android:id="@+id/remember_back"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:background="@null"
                                    android:paddingLeft="10dp"
                                    android:paddingRight="10dp"
                                    android:scaleType="fitCenter"
                                    android:src="@android:drawable/ic_delete"
                                    android:visibility="gone"
                                    tools:ignore="ContentDescription" />
                            </LinearLayout>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/remember_text"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/colon_text_home"
                            android:textSize="15sp"
                            android:visibility="visible" />
                    </FrameLayout>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="20dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/colon_end"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:scaleType="fitCenter"
                                android:src="@android:drawable/ic_notification_overlay"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/diaryTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="5dp"
                                android:background="@color/colorBackground2"
                                android:paddingStart="5dp"
                                android:singleLine="true"
                                android:text="@string/home_text"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="18sp"
                                tools:ignore="RtlSymmetry" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:scaleType="fitCenter"
                                android:src="@android:drawable/ic_notification_overlay"
                                android:visibility="invisible"
                                tools:ignore="ContentDescription" />

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:paddingEnd="25dp"
                                tools:ignore="RtlSymmetry">

                                <EditText
                                    android:id="@+id/contextEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:background="@null"
                                    android:hint="@string/text_hint"
                                    android:inputType="textMultiLine"
                                    android:visibility="invisible"
                                    tools:ignore="Autofill" />

                                <TextView
                                    android:id="@+id/showTextFiled"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="5dp"
                                    android:minHeight="140dp"
                                    android:textSize="14sp"
                                    android:visibility="invisible" />

                                <TextView
                                    android:id="@+id/hideTextFiled"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:visibility="visible" />
                            </FrameLayout>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <FrameLayout
                    android:id="@+id/frame_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                    <Button
                        android:id="@+id/save_Btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/save"
                        android:visibility="invisible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <Button
                            android:id="@+id/cha_Btn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:text="@string/edit"
                            android:visibility="invisible"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/del_Btn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_weight="0.5"
                            android:text="@string/delete"
                            android:visibility="invisible"
                            tools:ignore="ButtonStyle" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>