<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.graph.graph">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/title_graph"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                android:textSize="20sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/linechart"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginBottom="10dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/check_history"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    tools:ignore="KeyboardInaccessibleWidget">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleType="fitCenter"
                            android:src="@drawable/graph_circle"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:background="@color/colorBackground4"
                            android:paddingStart="5dp"
                            android:singleLine="true"
                            android:text="@string/history"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/history_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textSize="13sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:scaleType="fitCenter"
                                android:src="@drawable/graph_circle"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="5dp"
                                android:background="@color/colorBackground4"
                                android:paddingStart="5dp"
                                android:singleLine="true"
                                android:text="@string/today_plan"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:scaleType="fitCenter"
                                android:src="@drawable/graph_circle"
                                android:visibility="invisible"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/historyPlan"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="25dp"
                                android:layout_marginBottom="5dp"
                                android:minHeight="120dp"
                                android:paddingStart="5dp"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:scaleType="fitCenter"
                                android:src="@drawable/graph_circle"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="5dp"
                                android:background="@color/colorBackground4"
                                android:paddingStart="5dp"
                                android:singleLine="true"
                                android:text="@string/yesterday_message"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:scaleType="fitCenter"
                                android:src="@drawable/graph_circle"
                                android:visibility="invisible"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/historyMessage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="25dp"
                                android:layout_marginBottom="5dp"
                                android:minHeight="120dp"
                                android:paddingStart="5dp"
                                android:textSize="13sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>